# skills

./: .gitignore  AGENTS.md  LICENSE  README.md
api-design/: README.md  SKILL.md
api-design/prompts/: REFERENCE_STANDARD_ADDENDUM.md
api-design/references/: 02_design_review.md  (+11 more)
bootstrap/: README.md  SKILL.md
business-audit/: README.md  SKILL.md
code-review/: README.md  SKILL.md
dependencies-audit/: README.md  SKILL.md
entity-protocol/: SKILL.md
frontmatter-protocol/: README.md  SKILL.md
graphify-protocol/: README.md  SKILL.md
kagi-search/: README.md  SKILL.md
markdown-protocol/: README.md  SKILL.md
nim-docgen/: INDEX.md
nim-docgen/scripts/transformer/: pyproject.toml
nim-docgen/scripts/transformer/transformer/: __init__.py  __main__.py  cli.py  config.py  exporter.py  html_extractor.py  html_to_markdown.py  loader.py  models.py  renderer.py  scanner.py  splitter.py  storage.py
nim-docgen/scripts/transformer/transformer/templates/: index.md.j2  module.md.j2  symbol.md.j2
preflight-checklist/: README.md  SKILL.md
project-audit/: README.md  SKILL.md
protobuf-lang/: README.md  SKILL.md
pytest-design/: README.md  SKILL.md
pytest-planner/: README.md  SKILL.md
python-lang/: README.md  SKILL.md
read-for-comments/: README.md  SKILL.md
repo-audit/: README.md  SKILL.md
security-audit/: README.md  SKILL.md
serena-audit/: README.md  SKILL.md
serena-protocol/: README.md  SKILL.md
shell-protocol/: README.md  SKILL.md
subagents-protocol/: README.md  SKILL.md
temporal-lang/: README.md  SKILL.md
todo-protocol/: README.md  SKILL.md
(+661 files in other folders)
