[project]
name = "transformer"
version = "0.1.0"
description = "Transform Nim jsondoc output into agent-readable Markdown."
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "markdownify>=1.2.3",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "typer>=0.27.0",
    "xxhash>=3.8.1",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transformer"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option"]
